fixed the google map clipping into nav bar page2

--- a/assets/styles2.css
+++ b/assets/styles2.css
@@ -1,6 +1,7 @@
 .section {
-  padding: 0;
-  margin: 0%;
+  margin-top: 4%;
+  margin-right: 2%;
+  align-items: right;
 }
 .container {
   padding: 20px;
